6135: Making the core tests work on JDK 9 and later
Reviewed-by: ghb